# LearnAndTest

./: README.md
cpp/test_440pcm/: main.cpp
cpp/test_atomic/: CMakeLists.txt  atomic.cpp  inc.h  main.cpp  order_acquire_release.cpp  order_relax.cpp  rand.cpp
cpp/test_av_freep/: CMakeLists.txt  main.cpp
cpp/test_backtrace/: CMakeLists.txt  main.cpp
cpp/test_bind/: CMakeLists.txt  bind.cpp
cpp/test_byte_interview/: CMakeLists.txt  constructor.cpp  uint.cpp
cpp/test_dymatic_cast/: main.cpp
cpp/test_file_hole/: main.cpp
cpp/test_function_static/: main.cpp
cpp/test_logic_add/: CMakeLists.txt  logic_add.cpp
cpp/test_mem_pool_queue/: CMakeLists.txt  Queue.cpp  Queue.h  TimeUtil.cpp  TimeUtil.h  const.h  (+2 more)
go/: 001-hello.go  002-sandbox.go  003-packages.go  004-imports.go  005-exported-names.go  006-functions.go  007-functions-continued.go  008-mutiple-results.go  009-named-results.go  010-variables.go  011-variables-with-initializers.go  012-short-variable-declarations.go  013-basic-types.go  014-zero.go  015-type-conversions.go  016-type-inference.go  017-constants.go  018-numeric-constants.go  019-for.go  020-for-continued.go  021-for-is-gos-while.go  022-forerver.go  023-if.go  024-if-with-a-short-statment.go  025-if-and-else.go  026-exercise-loops-and-functions.go  027-switch.go  028-switch-evaluation-order.go  029-switch-with-no-condition.go  030-defer.go  031-defer-multi.go  032-pointers.go  033-structs.go  034-struct-fields.go  035-struct-pointers.go  036-struct-literals.go  037-array.go  038-slices.go  039-slices-of-slice.go  040-slicing-slices.go  (+41 more)
(+35 files in other folders)
